force-app/main/default/objects/Account/fields/Extension_Area__c.field-meta.xml
<CustomField>
    <fullName>Extension_Area__c</fullName>
    <label>Extension Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Golden Plains</fullName>
                <label>Golden Plains Area</label>
            </value>
            <value>
                <fullName>San Luis Valley</fullName>
                <label>San Luis ValleyArea</label>
            </value>
            <value>
                <fullName>Southeast</fullName>
                <label>Southeast Area</label>
            </value>
            <value>
                <fullName>Tri-River</fullName>
                <label>Tri-River Area</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>