force-app/main/default/objects/Account/fields/Extension_Region__c.field-meta.xml
<CustomField>
    <fullName>Extension_Region__c</fullName>
    <label>Extension Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Front Range</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Southern</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>