force-app/main/default/objects/Account/fields/Extension_Regional_Office__c.field-meta.xml
<CustomField>
    <fullName>Extension_Regional_Office__c</fullName>
    <label>Extension Regional Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eastern Regional Office</fullName>
            </value>
            <value>
                <fullName>Front Range Regional Office</fullName>
            </value>
            <value>
                <fullName>Mountain Regional Office</fullName>
            </value>
            <value>
                <fullName>Southern Regional Office</fullName>
            </value>
            <value>
                <fullName>Western Regional Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>