force-app/main/default/objects/Account/recordTypes/Extension.recordType-meta.xml
<RecordType>
    <fullName>Extension</fullName>
    <active>true</active>
    <label>Extension</label>
</RecordType>